Fri May 28 13:33:05 1999  Ross Johnson  <rpj@swan.canberra.edu.au>

	* condvar.c (pthread_cond_broadcast): Fix possible memory fault
	- Mark E. Armstrong <avail@pacbell.net>
	
Thu May 27 13:08:46 1999  Ross Johnson  <rpj@swan.canberra.edu.au>

	* condvar.c (pthread_cond_broadcast): Fix logic bug
	- Peter Slacik <Peter.Slacik@tatramed.sk>;
	optimise sem_post loop
	- Bossom, John <John.Bossom@Cognos.COM>.

Fri May 14 12:13:18 1999  Ross Johnson  <rpj@swan.canberra.edu.au>

	* attr.c (pthread_attr_setdetachstate): Fix logic bug
	- Mike Russo <miker@eai.com>.

Sat May  8 09:42:30 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* pthread.def (sem_open): Add.
	(sem_close): Add.
	(sem_unlink): Add.
	(sem_getvalue): Add.

	* FAQ (Question 3): Add.

Thu Apr  8 01:16:23 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* semaphore.c (sem_open): New function; returns an error (ENOSYS).
	(sem_close): ditto.
	(sem_unlink): ditto.
	(sem_getvalue): ditto.

	* semaphore.h (_POSIX_SEMAPHORES): define.
	
Wed Apr  7 14:09:52 1999  Ross Johnson  <rpj@swan.canberra.edu.au>

	* errno.c (_REENTRANT || _MT): Invert condition.

	* pthread.h (_errno): Conditionally include prototype.

Wed Apr  7 09:37:00 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* *.c (comments): Remove individual attributions - these are
	documented sufficiently elsewhere.

	* implement.h (pthread.h): Remove extraneous include.

Sun Apr  4 11:05:57 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* sched.c (sched.h): Include.

	* sched.h: New file for POSIX 1b scheduling.

	* pthread.h: Move opaque structures to implement.h; move sched_*
	prototypes out and into sched.h.

	* implement.h: Add opaque structures from pthread.h.

	* sched.c (sched_yield): New function.

	* condvar.c (_pthread_sem_*): Rename to sem_*; except for
	_pthread_sem_timedwait which is an private function.

Sat Apr  3 23:28:00 1999  Ross Johnson  <rpj@ixobrychus.canberra.edu.au>

	* Makefile.in (OBJS): Add errno.o.
